package org.example.parking.lot;

public enum VehicleType {
    CAR, BIKE, TRUCK
}
